--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
+    "react-plaid-link": "^3.5.2",
     "shadcn-ui": "^0.8.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
