--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ PLAID_PRODUCTS=auth,transactions,identity
 PLAID_COUNTRY_CODES=US,CA
 
 #DWOLLA
-DWOLLA_KEY=
-DWOLLA_SECRET=
-DWOLLA_BASE_URL=
-DWOLLA_ENV=
+DWOLLA_KEY=0ia74HicxqLLGubTXtjXS9FtVnLhQv0mf0gWUtOZcDOk4ycLaX
+DWOLLA_SECRET=p6D9kIbgQSN2BwVWMzBqGu293X0vwMTBWNuU9W9REG2fbUvVnE
+DWOLLA_BASE_URL=https://api-sandbox.dwolla.com
+DWOLLA_ENV=sandbox
