--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
+    "@tanstack/react-table": "^8.20.1",
     "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "copy": "^0.3.2",
     "dwolla-v2": "^3.4.0",
     "lucide-react": "^0.424.0",
     "next": "14.2.5",
@@ -34,6 +39,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/copy": "^0.3.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
